# clicky

./: .gitignore  README.md  overlay.html  package-lock.json  package.json  vite.config.ts
docs/: API_CONTRACTS.md
src/: App.tsx  index.css  overlay-entry.tsx  overlay-main.tsx  overlay.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  capture.rs  deepgram.rs  lib.rs  main.rs  tts.rs
src/lib/: openrouter.ts  points.ts  prompt.ts
worker/: .dev.vars.example  package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts
