[package]
name = "clicky-tauri"
version = "0.1.0"
description = "Clicky-style AI companion (Tauri)"
authors = ["you"]
edition = "2021"

[lib]
name = "clicky_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
xcap = "0.0.11"
cpal = "0.15"
rodio = { version = "0.20", default-features = false, features = ["symphonia-mp3"] }
thiserror = "1"
url = "2"
http = "1"
once_cell = "1"
